fix dropdown menu on mobile

--- a/src/assets/sass/partials/_account.scss
+++ b/src/assets/sass/partials/_account.scss
@@ -79,8 +79,7 @@ div#account {
         }
 
         &.active > a, &.active > a:focus, &.active > a:hover {
-          background: none;
-          background-color: $dark-med;
+          background: $dark-med;
         }
       }
     }
